[package]
name = "experiments"
version = "0.1.0"
edition = "2021"

[dependencies]
rocket = { version = "0.5.0-rc.2", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
openmls = "0.6"
openmls_rust_crypto = "0.3"
openmls_basic_credential = "0.3"
tls_codec = "0.4"
base64 = "0.13"
once_cell = "1.17"
sha2 = "0.10"